src/pages/tree-page/tree-page.css
.treePage {
    font-size: 1.1rem;
    @media screen and (max-width: 1390px) {
        font-size: 1rem;
    }
    width: 100%;
    height: 100%;
    padding: 0 1em;
    background: rgba(25, 25, 47, 0.70);
    display: grid;
    grid-template: 1fr / minmax(min-content, 1fr) minmax(min-content, 2fr) minmax(min-content, 1fr);
    @media screen and (max-width: 1032px) {
        grid-gap: 1em;
    }
    @media screen and (max-width: 991px) {
        padding: 0;
        grid-gap: 0;
        grid-template: 1fr / 1fr
    }
    grid-gap: 1.5em;
    justify-items: center;
}

.activeToy__toy {
    width: 50px;
    height: 50px;
    position: fixed;
    bottom: 0;
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
}

.treePage__title {
    font-size: 1.2em;
    margin-top: 0.7em;
    margin-bottom: 0.3em;
}

